# github-flows

./: .gitignore  shell.nix
demo/: Cargo.toml
demo/src/: demo.rs
github-extension/: package-lock.json  package.json  pnpm-lock.yaml
github-extension/lib/: github.ts
github-extension/pages/api/: access.ts  auth.ts
github-extension/pages/api/[flows_user]/: access.ts
github-extension/pages/api/[flows_user]/[flow_id]/: listen.ts  revoke.ts
github-extension/pages/api/[flows_user]/[flow_id]/proxy/: [...all].ts
github-extension/pages/api/[flows_user]/[login]/proxy/: [...all].ts
github-extension/pages/api/[flows_user]/proxy/: [...all].ts
github-extension/pages/api/event/[owner]/: [repo].ts
github-extension/pages/api/proxy/: [...all].ts
github-integration/: .gitignore  package-lock.json  package.json  schema.sql  shell.nix
github-integration/lib/: github.ts  state.ts
github-integration/pages/api/: access.ts  migrate.ts
github-integration/pages/api/[flows_user]/: pre_install.ts
github-integration/pages/api/[flows_user]/[flow_id]/: listen.ts
github-integration/pages/api/[flows_user]/[flow_id]/proxy/: [...all].ts
github-integration/pages/api/[flows_user]/proxy/[github_login]/: [...all].ts
github-integration/pages/api/connected/: [flows_user].ts
github-integration/pages/api/event/[owner]/: [repo].ts
github-integration/public/: README.md
github-sdk/: Cargo.toml  README.md  shell.nix
github-sdk/lib/: Cargo.toml  README.md
github-sdk/lib/src/: lib.rs
github-sdk/macros/: Cargo.toml
github-sdk/macros/src/: lib.rs
github-sdk/src/: lib.rs  main.rs
github-wasi/: Cargo.toml
github-wasi/src/: lib.rs
