[package]
name = "github-flows"
version = "0.5.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "GitHub extension for flows.network"
documentation = "https://docs.rs/github-flows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "wasm32-wasi"

[dependencies]
tokio_wasi = { version = "1.25.1", features = ["full"] }
octocrab = { version = "0.18.2", default-features = false, features = ["wasi", "no-pool"], package = "octocrab_wasi" }
once_cell = "1.17.0"
http_req_wasi = "0.10.2"
serde_json = "1.0.93"
flowsnet-platform-sdk = "0.1"
lazy_static = "1"
