[package]
name = "github-flows"
version = "0.8.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "GitHub Integration for flows.network"
documentation = "https://docs.rs/github-flows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["wasm32-wasi"]
rustc-args = ["--cfg", "wasmedge", "--cfg", "tokio_unstable"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros", "net", "time"] }
octocrab = { version = "0.33", default-features = false }
once_cell = "1.17.0"
flowsnet-platform-sdk = "0.1"
lazy_static = "1"
github-flows-macros = { version = "0.2", path = "../macros" }
